# harness-convert

./: .gitignore  README.md  hc.py  package.json  pyproject.toml
.github/workflows/: pages.yml  release.yml  tap-token-check.yml
docs/superpowers/specs/: 2026-07-19-landing-redesign-design.md
hconv/: __init__.py  adapter.py  cli.py  common.py  enrich.py
hconv/adapters/: __init__.py  claude.py  codex.py  opencode.py
landing/: CNAME  index.html
packaging/homebrew/: harness-convert.rb
tests/: test_hconv.py
